added news articles
